<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:fab="http://schemas.android.com/apk/res-auto"
             xmlns:tools="http://schemas.android.com/tools"
             tools:context="bikeproject.uni.bikeapp.MainActivity"
             android:layout_width="match_parent"
             android:layout_height="match_parent">

    <LinearLayout
            android:id="@+id/list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/usernameTextBox"
                android:text="Username"
                android:layout_marginTop="16dp"
                android:layout_marginStart="16dp"
                android:textSize="58sp"
                android:fontFamily="sans-serif-black"
                android:textColor="@color/md_black_1000"/>

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/leaderboardTextView"
                android:text="LeaderBoard spot: 8"
                android:layout_marginTop="16dp"
                android:layout_marginStart="16dp"
                android:textSize="36sp"
                android:fontFamily="sans-serif-black"
                android:textColor="@color/md_black_1000"/>

        <Button
                android:id="@+id/customizeButton"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginStart="16dp"
                android:textSize="16sp"
                android:paddingStart="0dp"
                android:paddingEnd="0dp"
                android:text="@string/customize"
                android:textStyle="bold"/>

        <Button
                android:id="@+id/viewLeaderBoardButton"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginStart="16dp"
                android:textSize="16sp"
                android:paddingStart="0dp"
                android:paddingEnd="0dp"
                android:text="@string/view_leaderboard"
                android:textStyle="bold"/>

        <Button
                android:id="@+id/connectToVrButton"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginStart="16dp"
                android:textSize="16sp"
                android:paddingStart="0dp"
                android:paddingEnd="0dp"
                android:text="@string/connect_to_vr"
                android:textStyle="bold"/>

        <Button
                android:id="@+id/connectToWebsiteButton"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginStart="16dp"
                android:textSize="16sp"
                android:paddingStart="0dp"
                android:paddingEnd="0dp"
                android:text="@string/connect_to_website"
                android:textStyle="bold"/>

    </LinearLayout>

    <!--<com.github.clans.fab.FloatingActionButton-->
            <!--android:id="@+id/fab"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_gravity="bottom|end"-->
            <!--android:layout_marginBottom="8dp"-->
            <!--android:layout_marginEnd="8dp"-->
            <!--android:src="@drawable/ic_play"-->
            <!--fab:fab_colorNormal="@color/primary"-->
            <!--fab:fab_colorPressed="@color/primary"-->
            <!--fab:fab_colorRipple="@color/primary_light"/>-->

</FrameLayout>